[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "ChromoRetriever"
version = "0.1.0"
description = "Fetch genome sequence/chromosome tables from the NCBI Datasets API and export to CSV/TSV."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  {name = "Mahmoud Zakaria"},
  {name = "Abdelghani Belgaid"},
]
keywords = ["bioinformatics", "genomics", "NCBI", "datasets", "chromosome", "sequence-report"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "requests>=2.31.0",
]

[project.optional-dependencies]
pandas = ["pandas>=2.0"]
tqdm = ["tqdm>=4.66"]
dev = [
  "pytest>=8.0",
  "responses>=0.25",
  "ruff>=0.6",
  "mypy>=1.8",
  "build>=1.2",
  "twine>=5.1",
]

[project.urls]
Repository = "https://github.com/abdelghanibelgaid/ChromoRetriever"
Issues = "https://github.com/abdelghanibelgaid/ChromoRetriever/issues"

[project.scripts]
chromoretriever = "ChromoRetriever.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ChromoRetriever"]

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
