[build-system]
requires = ["hatchling>=1.24.2", "editables>=0.5"]
build-backend = "hatchling.build"

[project]
name = "ChromoRetriever"
version = "0.1.3"
description = "Chromosome metadata retrieval from the NCBI Datasets API."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Abdelghani Belgaid" },
  { name = "Zakaria Mahmoud" },
]
keywords = ["bioinformatics", "genomics", "chromosome", "ncbi"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "requests>=2.31.0",
  "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "ruff>=0.6",
]
pandas = [
  "pandas>=2.0",
]
notebook = [
  "jupyter>=1.0",
  "ipykernel>=6.0",
  "pandas>=2.0",
]
app = [
  "streamlit>=1.30",
  "pandas>=2.0",
]

[project.urls]
Repository = "https://github.com/abdelghanibelgaid/ChromoRetriever"
Issues = "https://github.com/abdelghanibelgaid/ChromoRetriever/issues"
Documentation = "https://github.com/abdelghanibelgaid/ChromoRetriever/tree/main/docs"

[project.scripts]
chromoretriever = "chromoretriever.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["chromoretriever"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["examples/*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.ruff.format]
exclude = ["examples/*.ipynb"]
